# Spectral-Storyteller

./: .gitignore  Anwendungsbeispiele.txt  Architektur und Signalflow.txt  CMakeLists.txt  Density und Brightness.tct  Modulationswerkzeuge.txt  Projektplan inkl. Requests  UI.txt  Vision.txt  plan-spectralStoryteller.prompt.prompt.md
.agents/skills/testing-spectral-storyteller/: SKILL.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: ModulationMatrix.cpp  ModulationMatrix.h  ObjectDatabase.cpp  ObjectDatabase.h  SpectralFrameBuffer.cpp  SpectralFrameBuffer.h  TimelineData.cpp  TimelineData.h
Source/UI/: FxBrowserOverlay.cpp  FxBrowserOverlay.h  FxRackPanel.cpp  FxRackPanel.h  ModulationPanel.cpp  ModulationPanel.h  NeumorphicKnobLookAndFeel.h  ObjectSidebar.cpp  ObjectSidebar.h  SpectralSelector.cpp  SpectralSelector.h  SpectralView.cpp  SpectralView.h  StoryTimelineComponent.cpp  StoryTimelineComponent.h
